--- a/static/index.html
+++ b/static/index.html
@@ -8,30 +8,33 @@
 </head>
 <body>
   <div class="container">
-    <div class="question-container">
-      <div id="question-text"></div>
-      <img id="question-image" src="" alt="Question Image">
-      <code>Data Set:</code>
-      <div id="progress-counter"></div>
-      <div class="progress-bar-container">
-        <div id="progress-bar"></div>
-      </div>      
-      <code>Mastered:</code>
-      <div id="mastered-counter"></div>
-      <div class="progress-bar-container">
-        <div id="mastered-bar"></div>
-      </div>      
-      <code>Learning:</code>
-      <div id="learning-counter"></div>
-      <div class="progress-bar-container">
-        <div id="learning-bar"></div>
-      </div>    
-    </div>
-    <div class="answer-container">
-      <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(0)">
-      <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(1)">
-      <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(2)">
-      <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(3)">
+    <div id="stages-container"></div>
+    <div class="vocabulary-builder-container">
+      <div class="question-container">
+        <div id="question-text"></div>
+        <img id="question-image" src="" alt="Question Image">
+        <code>Data Set:</code>
+        <div id="progress-counter"></div>
+        <div class="progress-bar-container">
+          <div id="progress-bar"></div>
+        </div>      
+        <code>Mastered:</code>
+        <div id="mastered-counter"></div>
+        <div class="progress-bar-container">
+          <div id="mastered-bar"></div>
+        </div>      
+        <code>Learning:</code>
+        <div id="learning-counter"></div>
+        <div class="progress-bar-container">
+          <div id="learning-bar"></div>
+        </div>    
+      </div>
+      <div class="answer-container">
+        <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(0)">
+        <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(1)">
+        <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(2)">
+        <input type="button" class="answer-button" name="answer" onclick="quiz.checkAnswer(3)">
+      </div>
     </div>
   </div>
   <script src="script.js"></script>
